--- a/HalloDocWeb/Views/Admin/_Active.cshtml
+++ b/HalloDocWeb/Views/Admin/_Active.cshtml
@@ -85,7 +85,7 @@
                     <span><i class="fa-regular fa-envelope fa-lg"></i></span>
                 </td>
                 <td class="font">
-                    @item.Dateofservice
+                    @item.DOB
                 </td>
                 <td class="font">
                     Patient @item.Name
