--- a/HalloDocWeb/Views/Admin/_Unpaid.cshtml
+++ b/HalloDocWeb/Views/Admin/_Unpaid.cshtml
@@ -87,7 +87,7 @@
                     Dr. Agola
                 </td>
                 <td class="font">
-                    @item.Dateofservice
+                    @item.DOB
                 </td>
                 <td class="font">
                     <button class="btn btn-outline-light"> <i class="fa-solid fa-phone"></i> @item.Phonenumber</button>
