--- a/HalloDocWeb/Views/Admin/_New.cshtml
+++ b/HalloDocWeb/Views/Admin/_New.cshtml
@@ -87,7 +87,7 @@
                     <span><i class="fa-regular fa-envelope fa-lg"></i></span>
                 </td>
                 <td class="font">
-                    @item.Dateofservice
+                    @item.DOB
                 </td>
                 <td class="font">
                     Patient @item.Name
@@ -125,6 +125,34 @@
         }
     </tbody>
 </table>
+<div aria-label="Page navigation">
+    <ul class="pagination justify-content-center mt-3">
+        @if (Model.Count != 0 && Model[0].TotalPages >= 1)
+        {
+            <!-- Previous page -->
+            <li class="page-item @(Model[0].PreviousPage ? " " : "disabled")">
+                <a class="page-link" href="javascript:void(0)" onclick="changePage(@Model[0].CurrentPage-1)" aria-label="Previous">
+                    <span aria-hidden="true"> &lt;  </span>
+                </a>
+            </li>
+
+            <!-- Page numbers -->
+            @for (int i = 1; i <= Model[0].TotalPages; i++)
+            {
+                <li class="page-item @(Model[0].CurrentPage == i ? "active" : " ")">
+                    <a class="page-link" id="plink-@i" href="javascript:void(0)" onclick="changePage(@i)">@i</a>
+                </li>
+            }
+
+            <!-- Next page -->
+            <li class="page-item @(Model[0].NextPage ? " " : "disabled")">
+                <a class="page-link" href="javascript:void(0)" onclick="changePage(@Model[0].CurrentPage+1)" aria-label="Next">
+                    <span aria-hidden="true"> &gt; </span>
+                </a>
+            </li>
+        }
+    </ul>
+</div>
 <div class="accordion showonmobile mt-3" id="accordionExample" style="display:none" id="adminTable">
     @if (1 == 1)
     {
