--- a/HalloDocWeb/Views/Home/document.cshtml
+++ b/HalloDocWeb/Views/Home/document.cshtml
@@ -6,12 +6,16 @@
     ViewData["Title"] = "Document Page";
 }
 <nav class="bg-white">
-    <div class="container-fluid shadow">
-        <ul>
+    <div class="container-fluid shadow p-0">
+        <ul class="sidebar p-0">
             <li>
-                <img src="~/OneDrive_2024-01-17/SRS Screen Shorts/backremovelogo.png" alt="" height="100px" width="180">
+                <div class=" bg-transparent d-flex">
+                    <button class="Logout1 btn showonmobile hide " data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fa-solid fa-bars" style="color: #54d4d3;"></i> </button>
+                    <img src="~/OneDrive_2024-01-17/SRS Screen Shorts/backremovelogo.png" alt="" height="100px" width="180">
+                </div>
+                @* <img src="~/OneDrive_2024-01-17/SRS Screen Shorts/backremovelogo.png" alt="" height="100px" width="180"> *@
             </li>
-            <li class="hideonmobile me-2">Welcome <b> @Accessor.HttpContext.Session.GetString("Usarname")</b></li>
+            <li class="hideonmobile me-2">Welcome <b> @Accessor.HttpContext.Request.Cookies["Usarname"]</b></li>
             <li>
                 <a asp-controller="Home" asp-action="patientlogin">
                     <button class="btn hideonmobile me-2"
@@ -32,7 +36,7 @@
             <li><button class="moonbtn backtra me-2"><i class="fa-solid fa-moon  "></i></button></li>
         </ul>
         <hr>
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <ul class="nav nav-tabs hideonmobile" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
                 <button class="nav-link active border-0 text-muted" id="home-tab" data-bs-toggle="tab"
                         data-bs-target="#home" type="button" role="tab" aria-controls="home"
@@ -50,116 +54,146 @@
         </ul>
     </div>
 </nav>
+<div class="offcanvas offcanvas-start w-50 showonmobile hide bg-light" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+    <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Welcome <strong>@Accessor.HttpContext.Request.Cookies["Usarname"]</strong></h5>
+        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+        <div class="offcanvasmenu p-2"><a id="dashboardnav" class="text-muted text-decoration-none">Dashboard</a></div>
+        <div class="offcanvasmenu p-2"><a id="myprofilenav" class="text-muted text-decoration-none">Profile</a></div>
+    </div>
+</div>
 <div class="tab-content">
-        <div class="tab-pane container active" id="dashboard">
-            <div class="container mx-0">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="d-flex justify-content-between mt-3">
-                            <h4 class="mt-3">Documents</h4>
-                            <a class="text-start text-info text-decoration-none " asp-controller="Home" asp-action="patientdashboard">
-                                <button class="btn btn-white  text-info border-info rounded ">
-                                    <i class="fa-solid  fa-less-than"></i> Back
-                                </button>
-                            </a>
-                        </div>
-                        <div class="container  rounded bg-white shadow py-3">
-                            <h6 class="text-muted">Patient Name</h6>
-                            <h4 style="color:#54d4d3;">@Accessor.HttpContext.Session.GetString("Usarname")</h4>
-                            <h6 class="text-muted">Check here for any files that you or the doctors of your subsequents requestors have attached for you to review.</h6>
-                            <div class="row">
-                                <div class="row">
-                                    <div class="col">
-                                    <form method="post" asp-action="UploadFile" asp-controller="Home" asp-route-id="@ViewBag.Id" enctype="multipart/form-data">
-                                            <div class="form-group row">
-                                                <fieldset id="upload">
-                                                    <div class="input-group mb-3">
-                                                        <input type="file" name="fileToUpload" class="form-control" id="fileToUpload">
-                                                        <label class="input-group-text text-muted p-0" for="inputGroupFile02">
-                                                        <button class="btn btn-info mx-0">
-                                                            <i class="fa-solid fa-cloud-arrow-up" style="color: #ffffff;"></i>
-                                                                Upload
-                                                            </button>
-                                                        </label>
-                                                    </div>
-                                                </fieldset>
+    <div class="tab-pane container active" id="dashboard">
+        <div class="container mx-0">
+            <div class="row">
+                <div class="col-12">
+                    <div class="d-flex justify-content-between mt-3">
+                        <h4 class="mt-3">Documents</h4>
+                        <a class="text-start text-info text-decoration-none " asp-controller="Home" asp-action="patientdashboard">
+                            <button class="btn btn-white  text-info border-info rounded ">
+                                <i class="fa-solid  fa-less-than"></i> Back
+                            </button>
+                        </a>
+                    </div>
+                    <div class="container  rounded bg-white shadow py-3">
+                        <h6 class="text-muted">Patient Name</h6>
+                        <h4 style="color:#54d4d3;"> @Accessor.HttpContext.Request.Cookies["Usarname"]</h4>
+                        <small class="text-muted w-100 mb-3">Check here for any files that you or the doctors of your subsequents requestors have attached for you to review.</small>
+                        <div class="row">
+                            <div class="col">
+                                <form method="post" asp-action="UploadFile" asp-controller="Home" asp-route-id="@ViewBag.Id" enctype="multipart/form-data">
+                                    <div class="form-group row mt-3">
+                                        <fieldset id="upload">
+                                            <div class="input-group mb-3">
+                                                <input type="file" name="fileToUpload" class="form-control" id="fileToUpload">
+                                                <label class="input-group-text text-muted p-0" for="inputGroupFile02">
+                                                    <button class="btn btn-info mx-0">
+                                                        <i class="fa-solid fa-cloud-arrow-up" style="color: #ffffff;"></i>
+                                                        <span class="hideonmobile">Upload</span>
+                                                    </button>
+                                                </label>
                                             </div>
-                                        </form>
+                                        </fieldset>
                                     </div>
-                                </div>
-                                <div class="d-flex justify-content-between">
-                                    <h4 class="mt-3">Documents</h4>
-                                <a asp-action="DownloadAll" asp-controller="Home" asp-route-id="@ViewBag.Id"><button class="btn btn-white text-info border-info rounded mt-3 mb-3 " style="height: 40px; width : 150px; color: #54B4D3;">Download All</button></a>
-                                </div>
-                                <table class="table hideOnMobile ">
-                                    <thead class="bg-light justify-content-center ">
+                                </form>
+                            </div>
+                            <div class="d-flex justify-content-between">
+                                <h5 class="mt-3">Documents</h5>
+                                <a asp-action="DownloadAll" asp-controller="Home" asp-route-id="@ViewBag.Id"><button class="btn btn-white text-info border-info rounded mt-3 mb-3 " style="color: #54B4D3;"><i class="fa-solid hide showonmobile fa-cloud-arrow-down"></i><span class="hideonmobile">Download All</span></button></a>
+                            </div>
+                            <hr />
+
+                            <table class="table hideonmobile">
+                                <thead class="bg-light justify-content-center ">
+                                    <tr>
+                                        <th>
+                                            <input type="checkbox" class="ms-3" />
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Filename)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Createddate)
+                                        </th>
+                                        <th class="text-center"> Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model)
+                                    {
                                         <tr>
-                                            <th>
-                                                <input type="checkbox" class="ms-3" />
-                                            </th>
-                                            <th>
-                                                @Html.DisplayNameFor(model => model.Filename)
-                                            </th>
-                                            <th>
-                                                @Html.DisplayNameFor(model => model.Createddate)
-                                            </th>
-                                            <th class="text-center"> Action</th>
+                                            <td><input type="checkbox" class="ms-3" /></td>
+                                            <td>
+                                                <i class="fa-solid fa-file-pdf" style="color: #ff0000;"></i>
+                                                @Html.DisplayFor(modelItem => item.Filename)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Createddate)
+                                            </td>
+                                            <td class="text-center">
+                                                @*@Html.ActionLink("Click here to download", "DownloadFile", new { })*@
+                                                <a asp-action="DownloadFile" asp-controller="Home" asp-route-id="@item.Requestwisefileid"><button class="btn text-info btn-white border-1 border-info px-1" style="color: #54B4D3;"><i class="fa-solid fa-cloud-arrow-down"></i></button></a>
+                                            </td>
                                         </tr>
-                                    </thead>
-                                    <tbody>
-                                        @foreach (var item in  Model)
-                                        {
-                                            <tr>
-                                                <td><input type="checkbox" class="ms-3" /></td>
-                                                <td>
-                                                    <i class="fa-solid fa-file-pdf" style="color: #ff0000;"></i>
-                                                    @Html.DisplayFor(modelItem => item.Filename)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Createddate)
-                                                </td>
-                                                <td class="text-center">
-                                                    @*@Html.ActionLink("Click here to download", "DownloadFile", new { })*@
-                                                <a asp-action="DownloadFile" asp-controller="Home" asp-route-id="@item.Requestwisefileid"><button class="btn btn-white border-1 border-info px-1 "><i class="fa-solid fa-cloud-arrow-down" style="color: #54B4D3;"></i></button></a>
-                                                </td>
-                                            </tr>
-                                        }
-                                    </tbody>
-                                </table>
+                                    }
+                                </tbody>
+                            </table>
+                            <div class="showonmobile hide">
+                                @foreach (var item in Model)
+                                {
+                                    <p class="mb-1">
+                                        <input class="me-1" type="checkbox" />
+                                        <span>
+                                            <i class="fa-solid fa-file-pdf" style="color: #ff0000;"></i>
+                                                @Html.DisplayFor(modelItem => item.Filename)
+                                        </span>
+                                    </p>
+                                    <p class="mb-1">
+                                            @Html.DisplayFor(modelItem => item.Createddate)
+                                    </p>
+                                    <p class="mb-2">
+                                            @*@Html.ActionLink("Click here to download", "DownloadFile", new { })*@
+                                        <a asp-action="DownloadFile" asp-controller="Home" asp-route-id="@item.Requestwisefileid"><button class="btn btn-white text-info border-1 border-info " style="color: #54B4D3;"><i class="fa-solid fa-cloud-arrow-down"></i></button></a>
+                                    </p>
+                                    <hr/>
+                                }
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <script>
-            function changeTheme() {
-                if ($('#light-theme').css('display') == 'none') {
-                    document.querySelector(".login-bg").style.display = "block";
-                    document.querySelector(".login-bg-dark").style.display = "none";
-                }
-                else {
-                    document.querySelector(".login-bg").style.display = "none";
-                    document.querySelector(".login-bg-dark").style.display = "block";
-                }
+    </div>
+    <script>
+        function changeTheme() {
+            if ($('#light-theme').css('display') == 'none') {
+                document.querySelector(".login-bg").style.display = "block";
+                document.querySelector(".login-bg-dark").style.display = "none";
             }
-            function showSidebar() {
-                document.querySelector(".sideBar").style.display = "flex";
+            else {
+                document.querySelector(".login-bg").style.display = "none";
+                document.querySelector(".login-bg-dark").style.display = "block";
             }
-            function hideSidebar() {
-                document.querySelector(".sideBar").style.display = "none";
-            }
-            function showHidePassword() {
-                let temp = document.getElementById("inputPassword");
+        }
+        function showSidebar() {
+            document.querySelector(".sideBar").style.display = "flex";
+        }
+        function hideSidebar() {
+            document.querySelector(".sideBar").style.display = "none";
+        }
+        function showHidePassword() {
+            let temp = document.getElementById("inputPassword");
 
-                if (temp.type === "password") {
-                    temp.type = "text";
-                }
-                else {
-                    temp.type = "password";
-                }
+            if (temp.type === "password") {
+                temp.type = "text";
             }
-        </script>
+            else {
+                temp.type = "password";
+            }
+        }
+    </script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
