--- a/HalloDocWeb/Views/Shared/_AdminHeader.cshtml
+++ b/HalloDocWeb/Views/Shared/_AdminHeader.cshtml
@@ -113,26 +113,26 @@
             <div class="navbar navbar-expand-md navbar-light ">
                 <div class="collapse navbar-collapse " id="myNavbar">
                     <ul class="navbar-nav ">
-                        <li class="nav-item ms-4">
-                            <a class="nav-link fs-5" id="Dashboard" aria-current="page" asp-action="admindashboard" asp-controller="Admin">Dashboard</a>
+                        <li class="nav-item ms-1">
+                            <a class="nav-link " id="Dashboard" aria-current="page" asp-action="admindashboard" asp-controller="Admin">Dashboard</a>
                         </li>
-                        <li class="nav-item ms-4">
-                            <a class="nav-link fs-5" href="#">Provider Location</a>
+                        <li class="nav-item ms-1">
+                            <a class="nav-link " href="#">Provider Location</a>
                         </li>
-                        <li class="nav-item ms-4">
-                            <a class="nav-link fs-5" id="profile" asp-action="AdminMyProfile" asp-controller="Admin">My Profile</a>
+                        <li class="nav-item ms-1">
+                            <a class="nav-link " id="profile" asp-action="AdminMyProfile" asp-controller="Admin">My Profile</a>
                         </li>
-                        <li class="nav-item ms-4">
-                            <a class="nav-link fs-5" id="providers">Providers</a>
+                        <li class="nav-item ms-1">
+                            <a class="nav-link " id="providers">Providers</a>
                         </li>
-                        <li class="nav-item ms-4">
-                            <a class="nav-link fs-5" id="partners">Partners</a>
+                        <li class="nav-item ms-1">
+                            <a class="nav-link " id="partners">Partners</a>
                         </li>
-                        <li class="nav-item ms-4">
-                            <a class="nav-link fs-5" id="access">Access</a>
+                        <li class="nav-item ms-1">
+                            <a class="nav-link " id="access">Access</a>
                         </li>
-                        <li class="nav-item ms-4">
-                            <a class="nav-link fs-5" id="records">Records</a>
+                        <li class="nav-item ms-1">
+                            <a class="nav-link " id="records">Records</a>
                         </li>
                     </ul>
                 </div>
@@ -141,7 +141,7 @@
     </nav>
     <div class="offcanvas offcanvas-start w-50 showonmobile hide bg-light" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
         <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Welcome <strong>Test Tests</strong></h5>
+            <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Welcome <strong>@Accessor.HttpContext.Request.Cookies["Usarname"]</strong></h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
