--- a/HalloDocWeb/Views/Request/patient.cshtml
+++ b/HalloDocWeb/Views/Request/patient.cshtml
@@ -90,6 +90,7 @@
             </div>
             <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
                 <input asp-for="phonenumber" id="phone" class="form-control inp2" type="tel" placeholder="Phone Number">
+                <span asp-validation-for="phonenumber" class="text-danger"></span>
             </div>
         </div>
         <div class="row">
