--- a/HalloDocWeb/Views/Admin/EditPhysicianAccount.cshtml
+++ b/HalloDocWeb/Views/Admin/EditPhysicianAccount.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model HalloDocWebRepository.ViewModel.PhysicianProfile
+@{
     Layout = "_AdminHeader";
 }
 <style>
@@ -15,7 +16,7 @@
         <div class="col-12">
             <div class="d-flex justify-content-between mt-3">
                 <h4 class="mt-3">Create Physician Account</h4>
-                <a class="text-start text-info text-decoration-none ">
+                <a class="text-start text-info text-decoration-none " asp-action="AdminProvider" asp-controller="Admin">
                     <button class="btn btn-white  text-info border-info rounded ">
                         <i class="fa-solid  fa-less-than"></i> Back
                     </button>
@@ -62,32 +63,32 @@
                             Physician Information
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Firstname"disabled >
+                            <input asp-for=Firstname type="text" class="form-control" id="exampleFormControlInput1" placeholder="Firstname" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Firstname</label>
                             <span class="text-danger"></span>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Lastname"disabled >
+                            <input asp-for=Lastname type="text" class="form-control" id="exampleFormControlInput1" placeholder="Lastname" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Lastname</label>
                             <span class="text-danger"></span>
                         </div>
-                        <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input type="email" class="form-control" id="email" placeholder="Email" disabled>
+                        <div  class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
+                            <input asp-for=Email type ="email" class="form-control" id="email" placeholder="Email" disabled>
                             <label for="email" class="form-label ps-4">Email</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input id="phone" class="form-control inp2" type="tel" placeholder="Phone Number" disabled>
+                            <input asp-for=Mobile id="phone" class="form-control inp2" type="tel" placeholder="Phone Number" disabled>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Lastname" disabled>
+                            <input asp-for=Medicallicense type="text" class="form-control" id="exampleFormControlInput1" placeholder="Lastname" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Medical Licence</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="NPI Number" disabled>
+                            <input asp-for=Npinumber type ="text" class="form-control" id="exampleFormControlInput1" placeholder="NPI Number" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">NPI Number</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Synchronization Email Address" disabled>
+                            <input asp-for=Syncemailaddress type="email" class="form-control" id="exampleFormControlInput1" placeholder="Synchronization Email Address" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Synchronization Email Address</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6">
@@ -123,27 +124,27 @@
                             Mailing & Billing Information
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input type="text" class="form-control" id="Address-1" placeholder="Address 1" disabled>
+                            <input asp-for=Address1 type="text" class="form-control" id="Address-1" placeholder="Address 1" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Address 1</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input type="text" class="form-control" id="Address-2" placeholder="Address 2" disabled>
+                            <input asp-for=Address2 type="text" class="form-control" id="Address-2" placeholder="Address 2" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Address 2</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6  form-floating mb-3 text-muted">
-                            <input type="text" class="form-control" id="city" placeholder="City" disabled>
+                            <input asp-for=City type="text" class="form-control" id="city" placeholder="City" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">City</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6  form-floating mb-3 text-muted">
-                            <input type="text" class="form-control" id="state" placeholder="State" disabled>
+                            <input  type="text" class="form-control" id="state" placeholder="State" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">State</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6  form-floating mb-3 text-muted">
-                            <input type="text" class="form-control" id="zipcode" placeholder="Zip Code" disabled>
+                            <input asp-for=Zip type="text" class="form-control" id="zipcode" placeholder="Zip Code" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Zip Code</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input id="phone1" class="form-control inp2" type="tel" placeholder="Phone Number" disabled>
+                            <input asp-for=Altphone id="phone1" class="form-control inp2" type="tel" placeholder="Phone Number" disabled>
                         </div>
                     </div>
                     <div class="text-end pb-3">
@@ -159,11 +160,11 @@
                             Provider Profile
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input type="text" class="form-control" id="Address-1" placeholder="Business Name" disabled>
+                            <input asp-for=Businessname type ="text" class="form-control" id="Address-1" placeholder="Business Name" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Business Name</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input type="text" class="form-control" id="Address-2" placeholder="Business Website" disabled>
+                            <input asp-for=Businesswebsite type="text" class="form-control" id="Address-2" placeholder="Business Website" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Business Website</label>
                         </div>
                         <fieldset id="upload" class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
@@ -197,7 +198,7 @@
                             </button>
                         </div>
                         <div class="form-floating mb-3">
-                            <textarea class="form-control " placeholder="Admin Notes" id="floatingTextarea2" style="height: 100px" disabled></textarea>
+                            <textarea class="form-control" asp-for=Adminnotes placeholder="Admin Notes" id="floatingTextarea2" style="height: 100px" disabled></textarea>
                             <label for="floatingTextarea2" class="ps-4">Admin Notes</label>
                         </div>
                     </div>
@@ -339,5 +340,5 @@
     });
 </script>
 <script>
-    document.getElementById("profile").classList.add("active");
+    document.getElementById("provider").classList.add("active");
 </script>
