--- a/HalloDocWeb/Views/Shared/_AdminHeader.cshtml
+++ b/HalloDocWeb/Views/Shared/_AdminHeader.cshtml
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true">
     <link rel="stylesheet" href="~/css/patientrequest.css" asp-append-version="true">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/WebApplication1.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
@@ -197,7 +196,7 @@
             switch (id) {
                 case "profile":
                     e.classList.add("active");
-                    console.log(e.classList);
+                    // console.log(e.classList);
                     window.location.href = "/Admin/AdminProviderLocation";
                     break;
             }
